export publication quality images

--- a/search_interface/notebooks/Timeline.ipynb
+++ b/search_interface/notebooks/Timeline.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -61,6 +61,7 @@
     "plt.plot(years, [ response.facets['facet_fields']['deposition_year'][year] for year in years])\n",
     "plt.xticks(['1980', '1990', '2000', '2010'])\n",
     "fig.autofmt_xdate()\n",
+    "plt.savefig('../../images/PDB.eps', format='eps', dpi=1000)\n",
     "plt.show()"
    ]
   },
@@ -309,6 +310,7 @@
     "plt.legend()\n",
     "plt.title('Fraction of new structures that contain more than one macromolecular species')\n",
     "plt.ylim([0, 1])\n",
+    "plt.savefig('../../images/complexes.eps', format='eps', dpi=1000)\n",
     "plt.show()"
    ]
   },
